# OpenGLGame

./: CMakeLists.txt  README.md
OpenGLGame/: CMakeLists.txt
OpenGLGame/include/: OpenGLGame.h
OpenGLGame/src/: OpenGLGame.cpp
Rendering/: CMakeLists.txt
Rendering/Shaders/: LightingShader.vert  PerspectiveShader.vert
Rendering/include/: Rendering.h  Shader.hpp
Rendering/include/glad/: glad.h
Rendering/src/: Shader.cpp  glad.c
Shaders/: LightingShader.frag  MeshShader.vert
TestAssets/: car.blend  car.blend1  car.mtl  cube.blend  red
Utils/: CMakeLists.txt
Utils/include/: Matrix.hpp  Utils.hpp
Utils/src/: Utils.cpp  Vector.cpp
include/: OpenGLGame.h
include/Rendering/: Rendering.h
include/Utils/: Utils.h
src/: OpenGLGame.c
src/Rendering/: Camera.c  Mesh.c  Shader.c
src/Utils/: FileIO.c  Matrix.c  Utils.c
